--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.22"
   }
 }
